# task-tracker

./: .dockerignore  .editorconfig  README.md  docker-compose.yml  pyproject.toml  setup.cfg
config/: .env.template
docker/django/: Dockerfile
server/: settings.py  urls.py
server/tasks/: admin.py  models.py  serializers.py  urls.py  views.py
server/tasks/fixtures/: tasks.json
server/tasks/migrations/: 0001_initial.py  0002_auto_20190204_1921.py  0003_auto_20190204_2046.py
server/users/: admin.py  serializers.py  urls.py  views.py
server/users/migrations/: 0001_initial.py
tests/: conftest.py  factories.py
tests/test_server/: test_urls.py
tests/test_task/: test_models.py  test_urls.py
tests/test_users/: test_models.py
