[tool.poetry]
name = "task-tracker"
version = "0.1.0"
description = ""
authors = ["artem_b <hhugoo11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.1"
djangorestframework = "^3.9"
django-filter = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
